--- a/styles/assain.css
+++ b/styles/assain.css
@@ -89,37 +89,59 @@
 }
 .btn-3-4-com{
     font-size: 0.89rem;
-    color: rgba(255, 255, 255, 0.1)
+    /* color: rgba(255, 255, 255, 0.1) */
+    color:rgba(255, 255, 255, 0.65)
 }
 #btn-3{
-    backdrop-filter: blur(3px);
-    background-color: rgba(255, 255, 255, 0.1);
-    border-radius: 1.33rem;
-    border: none;
-}
-#btn-3-0{
-    font-size: 2.6rem;
-    color: #FFFFFF;
-    font-weight: 700;
-}
-#btn-4{
+    backdrop-filter: blur(10px);
+    position: relative;
+    left: -66px;
+    top: -160px;
+    width: 150px;
+    height: 80px;
     background-color: rgba(48, 48, 48, 0.54);
     border-radius: 1.33rem;
     border: none;
     padding: 10px;
+    /* margin-bottom: 60px; */
+
+}
+#btn-3-0{
+    font-size:1.6rem;
+    color: #FFFFFF;
+    font-weight: 700;
+}
+#btn-4{
+    position: relative;
+    top: -450px;
+    left: 50px;
+    backdrop-filter: blur(10px);
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 1.33rem;
+    border: none;
+    padding: 15px;
 
 }
 #btn-4-0{
-    font-size: 1.6rem;
+    font-size: 2.5rem;
     color: #FAFAF9;
     font-weight: 700;
 }
+#ball{
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    background-color: solid red;
+}
 #btn-3 , #btn-4{
-    
-    
-
+       
 }
 
+.btn-holder-2{
+}
+.pic-1{
+    width: auto;
+}
 
 /* navbar style */
 .navbar{
@@ -155,4 +177,102 @@ nav > h3{
     padding: 5px 10px;
     border-radius: 15px;
 
+}
+
+/* Responsive Section */
+/* Small device */
+
+@media screen and (max-width:576px) {
+    .nav-link , .nav-item{
+        display: none; 
+    }
+    .fitness{
+        font-size: 2.02rem;
+    }
+    .fitness , .hamburger{
+        /* margin-left: 20px;
+        margin-right: 20px; */
+        justify-content: space-between;
+        align-items: center;
+    }
+    /* .header-item{
+        margin-left: 20px;
+    } */
+    .container-2{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .br-1{
+        display: none;
+    }
+    #club{
+        display: none;
+    }
+    .btn-1{
+        background-color: #E6533C;
+        color: #FFFFFF;
+        font-size: 1rem;
+        font-weight: 600;
+        border-radius: 3rem;
+        width: 10.56rem;
+        height: 3.38rem;
+    }
+    .btn-2{
+        background-color: transparent;
+        color: #FFFFFF;
+        font-size: 1rem;
+        font-weight: 600;
+        border-radius: 3rem;
+        border: 1px solid white;
+        width: 10.56rem;
+        height: 3.38rem;
+    }
+    .btn-holder-1{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        
+    }
+    .header-title{
+        font-size: 2rem;
+    }
+    .hamburger{
+        position: relative;
+        top: -10px;
+        width: 24px;
+        height: 24px;
+    
+    }
+    .container-1 div{
+        align-items: center;
+        background: transparent;
+        width: 24px;
+        height: 4px;
+        background-color: #FFFFFF;
+        margin: 1.4px 0px;
+        border-radius: 1px;
+    }
+    .pic-1{
+        position: relative;
+        left: 20px;
+        width: 100%;
+    }
+    .mar-20{
+        border: 0px 20px;
+        margin: 0px 20px;
+    }
+    #btn-3{
+        position: relative;
+        font-size: 1.02rem;
+        top: -330px;
+        left: 20px;
+    }
+    #btn-4{
+        position: relative;
+        top: -530px;
+        left: 26px;
+        font-size: 1.02rem;
+
+
+    }
 }
