solve some responsive problem but still issu with hori

--- a/styles/assain.css
+++ b/styles/assain.css
@@ -37,7 +37,7 @@
 }
 .bg-1{
     background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 100%);
-    width: 100%;
+    width: auto;
 }
 .bg-2{
     background-color: #E6533C;
@@ -68,6 +68,7 @@
     color: #FFFFFF;
     font-size: 1.02rem;
     font-weight: 600;
+    border: n;
     border-radius: 3rem;
     width: 15rem;
     height: 40px;
@@ -82,7 +83,10 @@
     width: 15rem;
     height: 40px;
 }
-
+header{
+    /* width: 1440px; */
+    width: auto;
+}
 .container-2{
     align-items: center;
     justify-content: space-around;  
@@ -113,7 +117,7 @@
 }
 #btn-4{
     position: relative;
-    top: -450px;
+    top: -460px;
     left: 50px;
     backdrop-filter: blur(10px);
     background-color: rgba(255, 255, 255, 0.1);
@@ -186,6 +190,9 @@ nav > h3{
     .nav-link , .nav-item{
         display: none; 
     }
+    header{
+        width: 100%;
+    }
     .fitness{
         font-size: 2.02rem;
     }
@@ -216,6 +223,7 @@ nav > h3{
         border-radius: 3rem;
         width: 10.56rem;
         height: 3.38rem;
+        border: none;
     }
     .btn-2{
         background-color: transparent;
@@ -260,19 +268,28 @@ nav > h3{
     .mar-20{
         border: 0px 20px;
         margin: 0px 20px;
+        
     }
     #btn-3{
         position: relative;
-        font-size: 1.02rem;
         top: -330px;
         left: 20px;
     }
+    
     #btn-4{
         position: relative;
         top: -530px;
         left: 26px;
-        font-size: 1.02rem;
-
-
+    }
+    #btn-3-0{
+        font-size: 1.2rem;
+    }
+    #btn-4-0{
+        font-size: 1.82rem;
+        font-weight: 900;
+    }
+    .btn-3-4-com{
+        font-size: 0.56rem;
+        font-weight: 400;
     }
 }
