--- a/styles/assain.css
+++ b/styles/assain.css
@@ -14,8 +14,6 @@
     background-color: black;
 }
                
-
-
 /* all  colour styls */
 .clr-1{
     color: #E6533C;
@@ -47,13 +45,25 @@
 .flex{
     display: flex;
 }
+.title-com{
+    font-size: 3rem;
+    color: #FFFFFF;
+}
+.description-com{
+    font-size: 1rem;
+    color: rgba(255, 255, 255, 0.50);
+}
 
 /* header releted styls */
 #shape{
     font-family: 'Miama';
 }
+.hed-des{
+    margin-bottom: 22px;
+}
 .header-title{
     font-size: 2.9rem;
+    /* margin-bottom: -28px; */
 }
 .header-description{
     font-size: 1rem;
@@ -68,7 +78,7 @@
     color: #FFFFFF;
     font-size: 1.02rem;
     font-weight: 600;
-    border: n;
+    border: none;
     border-radius: 3rem;
     width: 15rem;
     height: 40px;
@@ -135,16 +145,46 @@ header{
     height: 40px;
     width: 40px;
     border-radius: 50%;
-    background-color: solid red;
-}
-#btn-3 , #btn-4{
-       
-}
-
-.btn-holder-2{
 }
 .pic-1{
     width: auto;
+}
+/* container-3 habit */
+.container-3{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+.hab-t{
+    color: #FFFFFF;
+    font-size: 1.03rem;
+}
+.oh{
+    text-align: center;
+}
+.pic-holder-h{
+    display: flex;
+    position: relative;
+    width: auto;
+    margin-left:  250px;
+    margin-right: 250px;
+    flex-direction: row;
+    
+}
+.pic-h{
+    position: relative;
+    border: 4px solid rgba(255, 255, 255, 0.1);
+    height: 250px;
+    width: 250px;
+    overflow: hidden;
+    border-radius: 50%;
+}
+.ha-p-s{
+    padding: 40px;
+    text-align: center;
+    align-items: center;
 }
 
 /* navbar style */
