--- a/styles/assain.css
+++ b/styles/assain.css
@@ -173,8 +173,8 @@ header{
     display: flex;
     position: relative;
     width: auto;
-    margin-left:  250px;
-    margin-right: 250px;
+    margin-left:  270px;
+    margin-right: 270px;
     flex-direction: row;
     
 }
@@ -191,7 +191,51 @@ header{
     text-align: center;
     align-items: center;
 }
-
+/* Container 4 */
+.bg-3{
+    background-color: #222222;
+    width: 80%;
+}
+.container-4{
+    display: flex;
+    width: 100%;
+    border-radius: 1.02rem;
+    justify-content: center;
+    align-items: center;
+    /* justify-content: center; */
+    /* border: 2px solid red; */
+}
+.cont-1{
+    display: flex;
+    background-color: #222222;;
+    margin-right: 250px;
+    margin-left: 250px;
+    border-radius: 2rem;
+    /* border: 2px solid white; */
+}
+.con-4-0{
+    padding: 40px 270px 40px 50px;
+    align-items: left;
+    /* border: 4px solid greenyellow; */
+}
+.con-4-d{
+    margin-bottom: 3rem;
+}
+.btn-5{
+    background-color: #E6533C;
+    color: #FFFFFF;
+    font-size: 1.02rem;
+    font-weight: 600;
+    border: none;
+    border-radius: 3rem;
+    width: 15rem;
+    height: 40px;
+}
+.run{
+    width: 30rem;
+    height: 25rem;
+    padding: 40px 40px 40px 101px;
+}
 /* navbar style */
 .navbar{
     justify-content: space-between;
@@ -277,9 +321,9 @@ nav > h3{
         height: 3.38rem;
     }
     .btn-holder-1{
-        display: flex;
+        display: flex; 
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: space-around;
         
     }
     .header-title{
