--- a/styles/assain.css
+++ b/styles/assain.css
@@ -382,8 +382,6 @@ nav > h3{
     }
     /* habit */
     .container-3{
-        /* border: 2px solid red; */
-        /* overflow: hidden; */
         margin-top: -120px;
     }
     .title-com{
@@ -396,7 +394,31 @@ nav > h3{
     }
     .ha-p-s{
         padding: 25px;
-        /* text-align: center;
-        align-items: center; */
+    }
+    /* container 4 */
+    .container-4{
+        margin-top: 4.3rem;
+        overflow: hidden;
+        justify-content: center;
+        align-items: center;
+    }
+    .cont-1{
+        display: grid;
+        grid-template-rows: 1fr;
+        width: 100%;
+        background-color: #222222;;
+        border-radius: 1.1rem;
+    }
+    .con-4-0{
+        /* border: 2px solid white; */
+        /* overflow-y: hidden; */
+        justify-content: center;
+        align-items: center;
+    }
+    .run{
+        position: relative;
+        width: 18rem;
+        height: 14rem;
+        padding: 0px 40px 40px 40px;
     }
 }
