--- a/styles/assain.css
+++ b/styles/assain.css
@@ -397,7 +397,9 @@ nav > h3{
     /* container 4 */
     .container-4{
         margin-top: 4.3rem;
-        overflow: hidden;
+        /* border: 2px solid green; */
+        width: 100%;
+        overflow-x: hidden;
         justify-content: center;
         align-items: center;
     }
@@ -414,6 +416,10 @@ nav > h3{
     }
     .run{
         position: relative;
+        /* border: 2px solid red; */
+        overflow-x: hidden;
+        overflow-y: hidden;
+        border-radius: 1.3rem;
         width: 18rem;
         height: 14rem;
         padding: 0px 40px 40px 40px;
