--- a/styles/assain.css
+++ b/styles/assain.css
@@ -207,7 +207,7 @@ header{
 }
 .cont-1{
     display: flex;
-    background-color: #222222;;
+    background-color: #222222;
     margin-right: 250px;
     margin-left: 250px;
     border-radius: 2rem;
@@ -268,7 +268,132 @@ nav > h3{
     color: #FFFFFF;
     padding: 5px 10px;
     border-radius: 15px;
+}
+/* container 7 */
+/* .container-7{
+    width: 100%;
+	border: 4px solid red;
+}
+.con-7-oh{
+    
+    justify-content: center;
+    border: 2px solid rebeccapurple;
+}
+.con7-hed{
+    text-align: center;
+}
+.pic-container-7{
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-left: 290px;
+    margin-right: 190px;
+    padding: 20px;
+}
+.con-7-img{
+    object-fit: cover;
+    height: 272px;
+    width: 326px;
+}
+.con-7-t{
+    font-size: 1.25rem;
+    color: #FFFFFF;
+}
+.con-7-d{
+    font-size: 0.98rem;
+    color: rgba(255, 255, 255, 0.50);
+} */
+/* container 7  */
+.container-7{
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+.pic-container-7{
+    border: 4px solid red;
+    border-radius: 1.2rem;
+    width: 1060px;
+    height: 604px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 20px 0px 0px 20px;
+    margin: 58px 350px 88px 390px;
+}
+.head-7{
+    text-align: center;
+}
+.con-7-t{
+    position: relative;
+    top: 180px;
+    left: 20px;
+    font-size: 1.25rem;
+    color: #FFFFFF;
+}
+.con-7-d{
+    position: relative;
+    top: 180px;
+    left: 20px;
+    margin-top: -18px;
+    font-size: 0.98rem;
+    color: rgba(255, 255, 255, 0.50);
+}
+.tra-1{
+    background-image: url(../images/trainer1.png);
+    border-radius: 1rem;
+    background-size: cover;
+    width: 20.4rem;
+    height: 17rem;
+    /* width: 100%;
+    height: 100%; */ 
+}
 
+.tra-2{
+    background-image: url(../images/trainer2.png);
+    border-radius: 1rem;
+    background-size: cover;
+    /* object-fit: cover; */
+    width: 20.4rem;
+    height: 17rem;
+    /* width: 100%;
+    height: 100%; */
+    
+}
+.tra-3{
+    background-image: url(../images/trainer3.png);
+    border-radius: 1rem;
+    background-size: cover;
+    width: 20.4rem;
+    height: 17rem;
+    /* width: 100%;
+    height: 100%; */
+    
+}
+.tra-4{
+    background-image: url(../images/trainer4.png);
+    border-radius: 1rem;
+    background-size: cover;
+    width: 20.4rem;
+    height: 17rem;
+    
+}
+.tra-5{
+    background-image: url(../images/trainer5.png);
+    border-radius: 1rem;
+    background-size: cover;
+    width: 20.4rem;
+    height: 17rem;
+    /* width: 100%;
+    height: 100%; */
+    
+}
+.tra-6{
+    background-image: url(../images/trainer6.png);
+    border-radius: 1rem;
+    background-size: cover;
+    width: 20.4rem;
+    height: 17rem;
+    /* width: 100%;
+    height: 100%; */  
 }
 
 /* Responsive Section */
@@ -416,12 +541,23 @@ nav > h3{
     }
     .run{
         position: relative;
+        /* Object-fit: none;
+        Object-position: 66% 33%; */
         /* border: 2px solid red; */
-        overflow-x: hidden;
-        overflow-y: hidden;
+        /* overflow-x: hidden;
+        overflow-y: hidden; */
         border-radius: 1.3rem;
         width: 18rem;
         height: 14rem;
         padding: 0px 40px 40px 40px;
     }
+}
+/* container 7 */
+.container-7{
+    /* justify-content: center; */
+    border: 2px solid white;
+}
+.pic-container-7{
+    display: grid;
+    grid-template-rows: repeat(1, 1fr);
 }
